Add hbwui_tunnel() func

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 basic.exe.WebView2
 basic.exe
 basic.bat
-callback.exe.WebView2
-callback.exe
+tunnel.exe.WebView2
+tunnel.exe
 callback.bat
 advanced.exe
 advanced.exe.WebView2
